--- a/HTML/audioHTML/pozik.html
+++ b/HTML/audioHTML/pozik.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link
+			rel="shortcut icon"
+			href="../../main/img/music.png"
+			type="image/png"
+		/>
 		<link rel="stylesheet" href="../../main/css/menuGamb.css" />
 		<meta charset="UTF-8" />
 		<meta
@@ -28,7 +33,7 @@
 				margin-top: 20px;
 			}
 		</style>
-		<title>Document</title>
+		<title>Audio-prikol</title>
 	</head>
 	<body>
 		<div class="header">
