--- a/HTML/me.html
+++ b/HTML/me.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link
+			rel="shortcut icon"
+			href="../main/img/music.png"
+			type="image/png"
+		/>
 		<link rel="stylesheet" href="../main/css/menuGamb.css" />
 		<meta charset="UTF-8" />
 		<meta
@@ -34,7 +39,7 @@
 				background-color: aliceblue;
 			}
 		</style>
-		<title>Document</title>
+		<title>Audio-prikol</title>
 	</head>
 	<body>
 		<div class="header">
