--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link
+			rel="shortcut icon"
+			href="main/img/music.png"
+			type="image/png"
+		/>
 		<link rel="stylesheet" href="main/css/style.css" />
 		<meta charset="UTF-8" />
 		<meta
@@ -8,7 +13,7 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 
-		<title>Document</title>
+		<title>Audio-prikol</title>
 	</head>
 	<body>
 		<div class="header">
