--- a/HTML/audioHTML/pozik.html
+++ b/HTML/audioHTML/pozik.html
@@ -15,7 +15,7 @@
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 			body {
-				background: url(../../main/img/4532045a-4d12-4582-b31e-563c38887883.jpg);
+				background: url(../../main/img/back.jpg);
 				background-attachment: fixed;
 				margin: 0;
 				padding: 0;
@@ -26,7 +26,7 @@
 			.header {
 				width: 100%;
 				height: 70px;
-				background-color: #9932cc;
+				background-color: #d5713f;
 			}
 			.section {
 				margin-left: 5px;
@@ -47,31 +47,7 @@
 							>Каталог</a
 						>
 					</li>
-					<li>
-						<a class="menu__item" href="#">About</a>
-						<input
-							class="menu__check"
-							type="checkbox"
-							id="menu2"
-						/>
-						<label class="menu__showsub" for="menu2"
-							>&#9660;</label
-						>
-						<ul class="menu__submenu">
-							<li>
-								<a class="menu__item" href="#"
-									>Информация</a
-								>
-							</li>
-							<li>
-								<a class="menu__item" href="#"
-									>Компания</a
-								>
-							</li>
-						</ul>
-					</li>
-					<li><a class="menu__item" href="#">Price</a></li>
-					<li>
+				
 						<a
 							class="menu__item"
 							href="https://t.me/RAR_Nikita"
