--- a/HTML/me.html
+++ b/HTML/me.html
@@ -15,7 +15,7 @@
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 			body {
-				background: url(../../main/img/4532045a-4d12-4582-b31e-563c38887883.jpg);
+				background: url(../main/img/back.jpg);
 				background-attachment: fixed;
 				margin: 0;
 				padding: 0;
@@ -26,7 +26,7 @@
 			.header {
 				width: 100%;
 				height: 70px;
-				background-color: #9932cc;
+				background-color: #d5713f;
 			}
 			.section {
 				margin-left: 5px;
@@ -54,30 +54,6 @@
 						>
 					</li>
 					<li>
-						<a class="menu__item" href="#">About</a>
-						<input
-							class="menu__check"
-							type="checkbox"
-							id="menu2"
-						/>
-						<label class="menu__showsub" for="menu2"
-							>&#9660;</label
-						>
-						<ul class="menu__submenu">
-							<li>
-								<a class="menu__item" href="#"
-									>Информация</a
-								>
-							</li>
-							<li>
-								<a class="menu__item" href="#"
-									>Компания</a
-								>
-							</li>
-						</ul>
-					</li>
-					<li><a class="menu__item" href="#">Price</a></li>
-					<li>
 						<a
 							class="menu__item"
 							href="https://t.me/RAR_Nikita"
@@ -102,26 +78,35 @@
 				Audio-Prikol
 			</p>
 		</div>
-		<div class="tab">
-			<h1 style="background-color: #ffcc00; padding-left: 5px">RAR</h1>
-			<p style="font-size: 24px; padding-left: 5px">
-				Просто FrondEnd-разработчик уровня midle
-			</p>
-		</div>
-		<div class="tab">
-			<p
-				style="
-					padding-left: 5px;
-					background-color: #53a8c6;
-					font-size: 20px;
-					height: 40px;
-				"
-			>
-				Матвей Панин eKEY[228, Пахомов]
-			</p>
-			<p style="padding-left: 5px">
-				В сотрудничество с RAR по Вопросам Дизайна и Просто Пахом
-			</p>
+		<div style="margin-left: 5px" class="tabCen">
+			<div class="tab">
+				<h1 style="background-color: #ffcc00; padding-left: 5px">
+					RAR
+				</h1>
+				<p style="font-size: 24px; padding-left: 5px">
+					Просто FrondEnd-разработчик
+				</p>
+			</div>
+			<div class="tab">
+				<p
+					style="
+						padding-left: 5px;
+						background-color: #53a8c6;
+						font-size: 20px;
+						height: 40px;
+					"
+				>
+					Матвей Панин eKEY[228, Пахомов]
+				</p>
+				<p style="padding-left: 5px">
+					В сотрудничество с RAR по Вопросам Дизайна и Просто
+					Пахом
+				</p>
+				<a href="https://vk.com/matvey0063">Вконтакте</a>
+				<a href="https://www.instagram.com/matvey7520/?hl=ru"
+					>Instagram</a
+				>
+			</div>
 		</div>
 	</body>
 </html>
