--- a/HTML/audioHTML/musicJanr.html
+++ b/HTML/audioHTML/musicJanr.html
@@ -64,104 +64,106 @@
    </div>
    <div class="section">
       <p style="font-size: 24px; color: #fff">1. П.И.Чайковский(Скрипка Часть2)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/01. П.И.Чайковский Концерт для скрипки с оркестром 2 часть .mp3"></audio>
       <p style="font-size: 24px; color: #fff">2. П.И.Чайковский(Скрипка Часть3)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/02. П.И. Чайковский Концерт для скрипки с оркестром 3 часть.mp3"></audio>
       <p style="font-size: 24px; color: #fff">3.Берлиоз Симфония «Гарольд в Италии» (альт)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/03. Г. Берлиоз Симфония Гарольд в Италии.mp3"></audio>
       <p style="font-size: 24px; color: #fff">4.Сенс-Санс «Карнавал животных» «Лебедь» (виолончель)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/04. К. Сенс-Санс Карнавал животных Лебедь.mp3"></audio>
       <p style="font-size: 24px; color: #fff">5.Сенс-Санс «Карнавал животных» «Слон» (контрабас)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/05.  К. Сенс-Санс Карнавал животных Слон.mp3"></audio>
       <p style="font-size: 24px; color: #fff">6.Опера «Орфей» 2 действие мелодия флейты (флейта)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/06. К.В. Глюк опера Орфей мелодия флейты.mp3"></audio>
       <p style="font-size: 24px; color: #fff">7.Бах «Шутка» из оркестровой сюиты № 2 (флейта)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/07. И.С. Бах Шутка.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/07. И.С. Бах Шутка.mp3"></audio>
       <p style="font-size: 24px; color: #fff">8.Чайковский балет «Лебединое озеро» тема лебедей (гобой)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/08. П.И. Чайковский балет Лебединное озеро Тема лебедей.mp3"></audio>
       <p style="font-size: 24px; color: #fff">09.В. Гаврилин «Перезвоны» № 9 «Дудочка» (гобой)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/09. В.Гаврилин Перезвоны №9 Дудочка.mp3"></audio>
+      <audio preload="metadata" controls
+         src="../../main/audio/musicJaner/09. В.Гаврилин Перезвоны №9 Дудочка.mp3"></audio>
       <p style="font-size: 24px; color: #fff">10.М.И. Глинка Опера «Руслан и Людмила» 3 действие ария Ратмира
          (английский рожок)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/10. Глинка Руслан и Людмила Ария Ратмира.mp3"></audio>
       <p style="font-size: 24px; color: #fff">11 - 13.И.Ф. Стравинский Три пьесы для кларнета соло (кларнет)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/11. И.Ф. Стравинский Три пьесы для кларнета соло.mp3"></audio>
       <p style="font-size: 24px; color: #fff">11 - 13.И.Ф. Стравинский Три пьесы для кларнета соло (кларнет)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/12. И.Ф. Стравинский Три пьесы для кларнета соло.mp3"></audio>
       <p style="font-size: 24px; color: #fff">11 - 13.И.Ф. Стравинский Три пьесы для кларнета соло (кларнет)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/13. И.Ф. Стравинский Три пьесы для кларнета соло.mp3"></audio>
       <p style="font-size: 24px; color: #fff">14.П. Дюка «Ученик чародея» (фагот) </p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/14. П. Дюка Ученик чародея.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/14. П. Дюка Ученик чародея.mp3"></audio>
       <p style="font-size: 24px; color: #fff">15.М. Равель «Болеро» (саксофон)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/15. М Равель Болеро.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/15. М Равель Болеро.mp3"></audio>
       <p style="font-size: 24px; color: #fff">16.П.И. Чайковский Балет «Щелкунчик» «Испанский танец» (труба, кастаньеты)
       </p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/16. П.И.Чайковский Щелкункунчик Испанский танец.mp3"></audio>
 
       <p style="font-size: 24px; color: #fff">18.П.И. Чайковский Симфония № 5, 2 часть (валторна)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/18. П.И. Чайковский Симфония №5 Часть 2.mp3"></audio>
       <p style="font-size: 24px; color: #fff">19.Р. Вагнер Увертюра к опере «Тангейзер» (тромбон)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/19. Р. Вагнер увертюра к опере Тангейзер.mp3"></audio>
       <p style="font-size: 24px; color: #fff">20.М.П. Мусоргский «Картинки с выставки» «Быдло» (туба)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/20. М.П. Мусоргский Картинки с выставки Быдло.mp3"></audio>
       <p style="font-size: 24px; color: #fff">21.А.А. Батагов e-moll для двух роялей и литавр (литавры)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/21. А.Батагов e-moll для двух роялей и литавр.mp3"></audio>
       <p style="font-size: 24px; color: #fff">22.Д.Д. Шостакович Симфония № 7 , 1 часть (малый барабан) </p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/22. Д.Шостакович Симфония № 7 1часть.mp3"></audio>
+      <audio preload="" controls src="../../main/audio/musicJaner/22. Д.Шостакович Симфония № 7 1часть.mp3"></audio>
       <p style="font-size: 24px; color: #fff">23.Н.А. Римский-Корсаков «Шехеразада» 3 часть (бубен)</p>
-      <audio preload="auto" controls
+      <audio preload="" controls
          src="../../main/audio/musicJaner/23. Н.Римский-Корсаков Шехеразада 3 часть.mp3"></audio>
       <p style="font-size: 24px; color: #fff">24.Ж. Бизе Увертюра к опере «Кармен» (тарелки)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/24. Ж. Бизе увертюра к опере Кармен.mp3"></audio>
+      <audio preload="metadata" controls
+         src="../../main/audio/musicJaner/24. Ж. Бизе увертюра к опере Кармен.mp3"></audio>
       <p style="font-size: 24px; color: #fff">25.Ф. Лист Концерт № 1 для фортепиано с оркестром (треугольник) </p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/25. Ф. Лист Концерт № 1.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/25. Ф. Лист Концерт № 1.mp3"></audio>
       <p style="font-size: 24px; color: #fff">26.Ж. Бизе-Р. Щедрин «Кармен-сюита» вступление (колокола)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/26. Ж. Бизе-Р. Щедрин Кармен-Сюита вступление.mp3"></audio>
       <p style="font-size: 24px; color: #fff">27.М.И. Глинка Опера «Руслан и Людмила» 4 действие Марш Черномора
          (колокольчики) </p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/27. М.И. Глинка опера Руслан и Людмила Марш Черномора.mp3"></audio>
       <p style="font-size: 24px; color: #fff">28.М.И. Глинка «Арагонская хота» (кастаньеты) </p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/28. М.И. Глинка Арагонская хота.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/28. М.И. Глинка Арагонская хота.mp3"></audio>
       <p style="font-size: 24px; color: #fff">29.П.И. Чайковский Балет «Щелкунчик» «Танец феи Драже» (челеста)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/29. П.И. Чайковский балет Щелкунчик Танец феи Драже.mp3"></audio>
       <p style="font-size: 24px; color: #fff">30.К. Сен-Санс «Карнавал животных» «Ископаемые» (ксилофон)</p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/30. К.Сен-Санс Карнавал животных Ископаемые.MP3"></audio>
       <p style="font-size: 24px; color: #fff">31.С.В. Рахманинов «Вокализ» (вибрафон)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/31.С.В.Рахманинов Вокализ.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/31.С.В.Рахманинов Вокализ.mp3"></audio>
       <p style="font-size: 24px; color: #fff">32.Ф. Шопен Ноктюрн № 2 Es-dur (вибрафон)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/32.  Шопен ноктюрн № 2 Es-dur.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/32.  Шопен ноктюрн № 2 Es-dur.mp3"></audio>
       <p style="font-size: 24px; color: #fff">33.А. Марчелло Адажио (маримба, ксилофон, вибрафон)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/33. А. Марчелло Адажио.mp3"></audio>
+      <audio preload="metadata" controls src="../../main/audio/musicJaner/33. А. Марчелло Адажио.mp3"></audio>
       <p style="font-size: 24px; color: #fff">34.Д.Д. Шостакович Симфония № 11 «1905г», 2 часть «9 января» (там-там)
       </p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/34. Д.Д.Шостакович симфония № 11 1905 г  2 часть 9 января.mp3"></audio>
       <p style="font-size: 24px; color: #fff">35.Д.Д. Шостакович Симфония № 14, 5 часть «Начеку» (ксилофон, том-том)
       </p>
-      <audio preload="auto" controls
+      <audio preload="metadata" controls
          src="../../main/audio/musicJaner/35.Д.Д.Шостакович симфония № 14  5часть Начеку.mp3"></audio>
       <p style="font-size: 24px; color: #fff">36.М. И. Глинка Ноктюрн Es-dur (арфа)</p>
-      <audio preload="auto" controls src="../../main/audio/musicJaner/36 Глинка ноктюрн Es-dur .mp3"></audio>
+      <audio preload="" controls src="../../main/audio/musicJaner/36 Глинка ноктюрн Es-dur .mp3"></audio>
 
 
    </div>
