--- a/HTML/me.html
+++ b/HTML/me.html
@@ -1,70 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link
-			rel="shortcut icon"
-			href="../main/img/music.png"
-			type="image/png"
-		/>
-		<link rel="stylesheet" href="../main/css/menuGamb.css" />
-		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-			body {
-				background: url(../main/img/back.jpg);
-				background-attachment: fixed;
-				margin: 0;
-				padding: 0;
-				font-family: -apple-system BlinkMacSystemFont, 'Segoe UI',
-					Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-					'Helvetica Neue', sans-serif;
-			}
-			.header {
-				width: 100%;
-				height: 70px;
-				background-color: #d5713f;
-			}
-			.section {
-				margin-left: 5px;
-				margin-top: 20px;
-			}
-			.tab {
-				margin-top: 20px;
-				width: 350px;
-				height: 200px;
-				background-color: aliceblue;
-			}
-		</style>
-		<title>Audio-prikol</title>
-	</head>
-	<body>
-		<div class="header">
-			<nav class="nav">
-				<input class="nav__check" type="checkbox" id="showmenu" />
-				<label class="nav__showmenu" for="showmenu">&#9776;</label>
-				<label class="nav__back" for="showmenu"></label>
-				<ul class="menu">
-					<li>
-						<a class="menu__item" href="../../index.html"
-							>Каталог</a
-						>
-					</li>
-					<li>
-						<a
-							class="menu__item"
-							href="https://t.me/RAR_Nikita"
-							>Контакт</a
-						>
-					</li>
-					<li><a class="menu__item" href="#">О нас</a></li>
-				</ul>
-			</nav>
-			<p
-				style="
+
+<head>
+	<link rel="shortcut icon" href="../main/img/music.png" type="image/png" />
+	<link rel="stylesheet" href="../main/css/menuGamb.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
+		body {
+			background: url(../main/img/back.jpg);
+			background-attachment: fixed;
+			margin: 0;
+			padding: 0;
+			font-family: -apple-system BlinkMacSystemFont, 'Segoe UI',
+				Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+				'Helvetica Neue', sans-serif;
+		}
+
+		.header {
+			width: 100%;
+			height: 70px;
+			background-color: #d5713f;
+		}
+
+		.section {
+			margin-left: 5px;
+			margin-top: 20px;
+		}
+
+		.tab {
+			margin-top: 20px;
+			width: 350px;
+			height: 200px;
+			background-color: aliceblue;
+		}
+	</style>
+	<title>Audio-prikol</title>
+</head>
+
+<body>
+	<div class="header">
+		<nav class="nav">
+			<input class="nav__check" type="checkbox" id="showmenu" />
+			<label class="nav__showmenu" for="showmenu">&#9776;</label>
+			<label class="nav__back" for="showmenu"></label>
+			<ul class="menu">
+				<li>
+					<a class="menu__item" href="https://rar-armando.github.io/Audio-Prikol/">Каталог</a>
+				</li>
+				<li>
+					<a class="menu__item" href="https://t.me/RAR_Nikita">Контакт</a>
+				</li>
+				<li><a class="menu__item" href="#">О нас</a></li>
+			</ul>
+		</nav>
+		<p style="
 					z-index: 1;
 					font-family: 'Dancing Script', cursive;
 					float: right;
@@ -73,40 +65,36 @@
 					top: -30px;
 					right: 15px;
 					font-weight: 500;
-				"
-			>
-				Audio-Prikol
+				">
+			Audio-Prikol
+		</p>
+	</div>
+	<div style="margin-left: 5px" class="tabCen">
+		<div class="tab">
+			<h1 style="background-color: #ffcc00; padding-left: 5px">
+				RAR
+			</h1>
+			<p style="font-size: 24px; padding-left: 5px">
+				Просто FrondEnd-разработчик
 			</p>
 		</div>
-		<div style="margin-left: 5px" class="tabCen">
-			<div class="tab">
-				<h1 style="background-color: #ffcc00; padding-left: 5px">
-					RAR
-				</h1>
-				<p style="font-size: 24px; padding-left: 5px">
-					Просто FrondEnd-разработчик
-				</p>
-			</div>
-			<div class="tab">
-				<p
-					style="
+		<div class="tab">
+			<p style="
 						padding-left: 5px;
 						background-color: #53a8c6;
 						font-size: 20px;
 						height: 40px;
-					"
-				>
-					Матвей Панин eKEY[228, Пахомов]
-				</p>
-				<p style="padding-left: 5px">
-					В сотрудничество с RAR по Вопросам Дизайна и Просто
-					Пахом
-				</p>
-				<a href="https://vk.com/matvey0063">Вконтакте</a>
-				<a href="https://www.instagram.com/matvey7520/?hl=ru"
-					>Instagram</a
-				>
-			</div>
+					">
+				Матвей Панин eKEY[228, Пахомов]
+			</p>
+			<p style="padding-left: 5px">
+				В сотрудничество с RAR по Вопросам Дизайна и Просто
+				Пахом
+			</p>
+			<a href="https://vk.com/matvey0063">Вконтакте</a>
+			<a href="https://www.instagram.com/matvey7520/?hl=ru">Instagram</a>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
