--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<a href="HTML/audioHTML/musicJanr.html">
 				<div class="card">
 					<img style="width: 384px; height:244px ;" src="main/img/maxresdefault.jpg" alt="" class="imgAlb" />
-					<p class="textT">Для МЖ</p>
+					<p class="textT">Для <span style="font-family: 'Dancing Script', cursive;">МЖ</span></p>
 				</div>
 			</a>
 		</div>
@@ -80,10 +80,13 @@
 	<footer>
 		<div class="foot">
 			<p style="color: aliceblue; font-size: 24px">
-				Создатель Этого Чудо RAR
+				Создатель Этого Чудо <span style="font-family: 'Dancing Script', cursive;">RAR</span>
 			</p>
 			<p style="color: aliceblue; font-size: 14px">
-				Помощник Матвей Панин
+				Помощники:<br />
+				Матвей Пахомов<br />
+				Максим Матвеев
+
 			</p>
 			<div class="socialLink">
 				<a href="https://www.instagram.com/nikitka_hsl/?hl=ru" target="_blank"><img class="fa" src="main/img/2.png"
