--- a/HTML/me.html
+++ b/HTML/me.html
@@ -1,117 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-     <link rel="shortcut icon" href="../main/img/music.png" type="image/png" />
-     <link rel="stylesheet" href="../main/css/menuGamb.css" />
-     <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <style>
-          @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-
-          body {
-               background: url(../main/img/back.jpg);
-               background-attachment: fixed;
-               margin: 0;
-               padding: 0;
-               font-family: -apple-system BlinkMacSystemFont, 'Segoe UI',
-                    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-                    'Helvetica Neue', sans-serif;
-          }
-
-          .header {
-               width: 100%;
-               height: 70px;
-               background-color: #d5713f;
-          }
-
-          .section {
-               margin-left: 5px;
-               margin-top: 20px;
-          }
-
-          .tab {
-               margin-top: 20px;
-               width: 350px;
-               height: 200px;
-               background-color: aliceblue;
-          }
-     </style>
-     <title>Audio-prikol</title>
+    <link rel="stylesheet" href="../main/css/me.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>О нас</title>
 </head>
-
 <body>
-     <div class="header">
-          <nav class="nav">
-               <input class="nav__check" type="checkbox" id="showmenu" />
-               <label class="nav__showmenu" for="showmenu">&#9776;</label>
-               <label class="nav__back" for="showmenu"></label>
-               <ul class="menu">
-                    <li>
-                         <a class="menu__item" href="https://rar-armando.github.io/Audio-Prikol/	">Каталог</a>
-                    </li>
-                    <li>
-                         <a class="menu__item" href="https://t.me/RAR_Nikita">Контакт</a>
-                    </li>
-                    <li><a class="menu__item" href="#">О нас</a></li>
-               </ul>
-          </nav>
-          <p style="
-					z-index: 1;
-					font-family: 'Dancing Script', cursive;
-					float: right;
-					font-size: 40px;
-					position: absolute;
-					top: -30px;
-					right: 15px;
-					font-weight: 500;
-				">
-               Audio-Prikol
-          </p>
-     </div>
-     <div style="margin-left: 5px" class="tabCen">
-          <div class="tab">
-               <h1 style="background-color: #ffcc00; padding-left: 5px">
-                    RAR
-               </h1>
-               <p style="font-size: 24px; padding-left: 5px">
-                    Просто FrondEnd-разработчик
-               </p>
-          </div>
-          <div class="tabItem">
-               <div class="tab">
-                    <p style="
-						padding-left: 5px;
-						background-color: #53a8c6;
-						font-size: 20px;
-						height: 40px;
-					">
-                         Матвей Панин eKEY[228, Пахомов]
-                    </p>
-                    <p style="padding-left: 5px">
-                         В сотрудничестве с RAR по Вопросам Дизайна и Просто
-                         Пахом
-                    </p>
-                    <a href="https://vk.com/matvey0063">Вконтакте</a>
-                    <a href="https://www.instagram.com/matvey7520/?hl=ru">Instagram</a>
-               </div>
-               <div class="tab">
-                    <p style="
-						padding-left: 5px;
-						background-color: #e14837;
-						font-size: 20px;
-						height: 40px;
-					">
-                         Максим Матвеев
-                    </p>
-                    <p style="padding-left: 5px">
-                         В сотрудничестве с RAR, Поставляет звуки
-                    </p>
-                    <a href="https://vk.com/lalilolo">Вконтакте</a>
-                    <a href="https://www.instagram.com/prosto__chelovek69/?hl=ru">Instagram</a>
-               </div>
-          </div>
-     </div>
-</body>
+    <header class="header">
+        <h1 class="title">Audio-Prikol</h1>
+        <nav class="nav-menu">
+            <div class="hamburger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            <ul class="nav-links">
+                <li><a  class="nav-link" href="../index.html">На Главную</a></li>
+                <li><a href="HTML/me.html" class="nav-link" href="">О нас</a></li>
+                <li><a href="https://money.yandex.ru/transfer/quickpay?requestId=343139343931343037365f33313732323339633463393330323637363261353363616365656337663936646538653763396463" class="nav-link" href="">Помощь</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="flex-center">
+    <div class="card Maksim">
+        <div class="flex-right">
+        <a href="https://Instagram.com/prosto__chelovek69   "><img class="card-img" src="../main/img/instagram.png" alt=""></a>
+        <a href="https://vk.com/lalilolo"><img class="card-img" src="../main/img/VK.png" alt=""></a>
+            </div>
 
+        <h1 class="card-title">Master</h1>
+        <p class="card-text">В создании сайта - Владыка мемов</p>
+    </div>
+    <div class="card Oper">
+        <div class="flex-right">
+            <a href="https://Instagram.com/matvey7520"><img class="card-img" src="../main/img/instagram.png" alt=""></a>
+            <a href="https://vk.com/matvey0063"><img class="card-img" src="../main/img/VK.png" alt=""></a>
+                </div>
+        <h1 class="card-title">Oper</h1>
+        <p class="card-text">В создании сайта - Дизайнер </p>
+    </div>
+    <div class="card Rar">
+        <div class="flex-right">
+            <a href="https://Instagram.com/nikitka_hsl"><img class="card-img" src="../main/img/instagram.png" alt=""></a>
+            <a href="https://vk.com/rar_nikitka"><img class="card-img" src="../main/img/VK.png" alt=""></a>
+                </div>
+        <h1 class="card-title">RAR</h1>
+        <p class="card-text">В создании сайта - FrontEnd  Разработчик</p>
+    </div>
+    </div>
+
+
+    <script src="../main/js/app.js"></script>
+</body>
 </html>
